--- a/app/src/main/res/layout/activity_skill.xml
+++ b/app/src/main/res/layout/activity_skill.xml
@@ -66,30 +66,32 @@
         app:layout_constraintTop_toBottomOf="@+id/textView5">
 
         <ToggleButton
-            android:id="@+id/toggleButton5"
+            android:id="@+id/beginnerskillbtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
             android:layout_marginRight="8dp"
             android:layout_weight="1"
             android:background="@drawable/swoosh_toggle"
+            android:onClick="beginnerskillclicked"
             android:text="@string/beginner"
             android:textColor="@android:color/white"
             android:textOff="@string/beginner"
-            android:textOn="@string/beginner"
-            android:layout_marginEnd="8dp" />
+            android:textOn="@string/beginner" />
 
         <ToggleButton
-            android:id="@+id/toggleButton4"
+            android:id="@+id/ballerskillbtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="8dp"
+            android:layout_marginStart="8dp"
             android:layout_weight="1"
             android:background="@drawable/swoosh_toggle"
+            android:onClick="ballerskillclicked"
             android:text="@string/baller"
             android:textColor="@android:color/white"
             android:textOff="@string/baller"
-            android:textOn="@string/baller"
-            android:layout_marginStart="8dp" />
+            android:textOn="@string/baller" />
     </LinearLayout>
 
     <Button
@@ -102,6 +104,7 @@
         android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
         android:background="@drawable/shoop_button"
+        android:onClick="skillnextclicked"
         android:text="@string/next"
         android:textColor="@android:color/white"
         app:layout_constraintBottom_toBottomOf="@+id/imageView4"
